# pgatourPY

./: 404.html  CHANGELOG.md  PGATOUR_R_HARDENING_NOTES.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml  test.yaml
docs/: getting-started.md  index.md  reference.md
getting-started/: index.html
reference/: index.html
scripts/: generate_fixtures.py
search/: search_index.json
src/pgatourpy/: __init__.py  _api.py  _parse.py  client.py  stat_ids.py
src/pgatourpy/graphql/: Coverage.graphql  CurrentLeadersCompressed.graphql  GenericContentCompressed.graphql  NewsArticles.graphql  NewsFranchises.graphql  ScorecardCompressedV3.graphql  (+10 more)
tests/: conftest.py  test_api.py  test_content.py  test_leaderboard.py  test_live_data.py  test_parse.py  test_player_profile.py  test_players_tournaments.py  test_stats.py  test_utils.py
tests/fixtures/: Coverage.json  GenericContentCompressed.json  LeaderboardCompressedV3.json  NewsArticles.json  NewsFranchises.json  ScorecardCompressedV3.json  ScorecardStatsComparisonCategories.json  StatDetails.json  StatDetails_2025.json  TeeTimesCompressedV2.json  TourCupSplit.json  TourcastVideos.json  Tournaments.json  Videos.json  oddsToWinCompressed.json  odds_interactivity.json  player_bio.json  player_career.json  player_profile.json  player_results.json  player_stats.json  player_tournament_status_active.json  player_tournament_status_empty.json  players_R.json  schedule_R_2026.json  shotDetailsV4Compressed.json  shotDetailsV4Compressed_empty.json  speed_rounds_R.json
