[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgatourpy"
version = "0.1.0"
description = "Python client for the PGA Tour API — leaderboards, stats, scorecards, shot tracking, tee times, FedExCup standings, odds, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Adam Wickwire", email = "adam@adamwickwire.com" },
]
keywords = ["pga", "golf", "pga-tour", "sports", "statistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.25.0",
    "pandas>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/WalrusQuant/pgatourPY"
Repository = "https://github.com/WalrusQuant/pgatourPY"
Issues = "https://github.com/WalrusQuant/pgatourPY/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pgatourpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
